[gd_scene load_steps=9 format=2]

[ext_resource path="res://TS_DEMO (Update 01)/TS_DEMO (Update 01)/Terrain/Decorations/Tree-sheet.png" type="Texture" id=1]
[ext_resource path="res://Tree.gd" type="Script" id=2]

[sub_resource type="Animation" id=7]
resource_name = "Cut"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Tree:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Tree:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "idle_play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "check_hp"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tree:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Wind"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Tree:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 20.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 81, 103.5 )

[node name="Tree" type="KinematicBody2D" groups=["Interectable", "Tree"]]
script = ExtResource( 2 )

[node name="Tree" type="Sprite" parent="."]
position = Vector2( -1, -83 )
texture = ExtResource( 1 )
hframes = 8
region_enabled = true
region_rect = Rect2( 0, 0, 1536, 192 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Wind"
anims/Cut = SubResource( 7 )
anims/Hit = SubResource( 5 )
anims/RESET = SubResource( 2 )
anims/Wind = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Interectable"]]
position = Vector2( 0, -29 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="." groups=["Interectable", "Tree"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -81 )
shape = SubResource( 4 )

[node name="GrowTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
